Working on the skill gauge

--- a/projects.html
+++ b/projects.html
@@ -68,88 +68,88 @@
                 <!-- <a target="_blank" href="https://icons8.com/icon/111057/x">X</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
                 <a href="#" class="close" id="closecompetence"></a>
             </div>
-            <div class="card">
+            <div class="card hidden">
                 <div class="box">
-                    <div class="percent">
-                        <svg>
+                    <div class="percent hidden">
+                        <svg class="circles hidden">
                             <circle cx="70" cy="70" r="70"></circle>
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
-                        <div class="number">
-                            <h2>90 <span>%</span> </h2>
+                        <div class="number hidden">
+                            <h2 class="level hidden"> <span class="level hidden">90</span> <span class="level hidden">%</span> </h2>
                         </div>
                      </div>
-                     <h2 class="text">HTML</h2>
+                     <h2 class="text hidden">HTML</h2>
                 </div>
             </div>
-            <div class="card">
+            <div class="card hidden">
                 <div class="box">
-                    <div class="percent">
-                        <svg>
+                    <div class="percent hidden">
+                        <svg class="circles hidden">
                             <circle cx="70" cy="70" r="70"></circle>
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
-                        <div class="number">
-                            <h2>90 <span>%</span> </h2>
+                        <div class="number hidden">
+                            <h2 class="level hidden"><span class="level hidden">90</span> <span class="level hidden">%</span> </h2>
                         </div>
                      </div>
-                     <h2 class="text">CSS</h2>
+                     <h2 class="text hidden">CSS</h2>
                 </div>
             </div>
-            <div class="card">
+            <div class="card hidden">
                 <div class="box">
-                    <div class="percent">
-                        <svg>
+                    <div class="percent hidden">
+                        <svg class="circles hidden">
                             <circle cx="70" cy="70" r="70"></circle>
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
-                        <div class="number">
-                            <h2>90 <span>%</span> </h2>
+                        <div class="number hidden">
+                            <h2 class="level hidden"><span class="level hidden">90</span> <span class="level hidden">%</span> </h2>
                         </div>
                      </div>
-                     <h2 class="text">JAVASCRIPT</h2>
+                     <h2 class="text hidden">JAVASCRIPT</h2>
                 </div>
             </div>
-            <div class="card">
+            <div class="card hidden">
                 <div class="box">
-                    <div class="percent">
-                        <svg>
+                    <div class="percent hidden">
+                        <svg class="circles hidden">
                             <circle cx="70" cy="70" r="70"></circle>
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
-                        <div class="number">
-                            <h2>90 <span>%</span> </h2>
+                        <div class="number hidden">
+                            <h2 class="level hidden" class="level hidden"><span class="level hidden">90</span> <span class="level hidden">%</span> </h2>
                         </div>
                      </div>
-                     <h2 class="text">PHP</h2>
+                     <h2 class="text hidden">PHP</h2>
                 </div>
             </div>
-            <div class="card">
+            <div class="card hidden">
                 <div class="box">
-                    <div class="percent">
-                        <svg>
+                    <div class="percent hidden">
+                        <svg class="circles hidden">
                             <circle cx="70" cy="70" r="70"></circle>
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
-                        <div class="number">
-                            <h2>90 <span>%</span> </h2>
+                        <div class="number hidden">
+                            <h2 class="level hidden" class="level hidden"><span class="level hidden">90</span> <span class="level hidden">%</span> </h2>
                         </div>
                      </div>
-                     <h2 class="text">JQuery</h2>
+                     <h2 class="text hidden">JQuery</h2>
                 </div>
             </div>
-            <div class="card">
+            <div class="card hidden">
                 <div class="box">
-                    <div class="percent">
-                        <svg>
+                    <div class="percent hidden">
+                        <svg class="circles hidden">
                             <circle cx="70" cy="70" r="70"></circle>
                             <circle cx="70" cy="70" r="70"></circle>
                         </svg>
-                        <div class="number">
-                            <h2>90 <span>%</span> </h2>
+                        <div class="number hidden">
+                            <h2 class="level hidden"><span class="level hidden">90</span> <span class="level hidden">%</span> </h2>
                         </div>
                      </div>
-                     <h2 class="text">MySQL</h2>
+                     <h2 class="text hidden">MySQL</h2>
                 </div>
             </div>
         </div>
