Finsihed the responsive design

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html id="index-html" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="./Style/style.css">
 </head>
 <body>
-    <section id="bg">
+    <section id="bgindex">
        
    </section>
     <header class="header">
         <a href="#" draggable="false" class="home active"></a> <a class="titleText"> HOME</a>
         <a href="/projects.html" class="travel"></a><a class="titleText">PROJECTS</a>
-        <a href="#" class="astro"></a> <a class="titleText">ABOUT ME</a>
+        <a href="/about.html" class="astro"></a> <a class="titleText">ABOUT ME</a>
     </header>
    
       <h1 class="welcomeMessage"> WELCOME INTO A SPACE OF INFINITE POSSIBILITIES </h1>
