Added comments and made it compatible with the company's servers

--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
         </div>
 
         <header class="header">
-            <a href="/index.html" draggable="false" class="home"></a> <a class="titleText"> HOME</a>
-            <a href="projects.html" class="travel "></a><a class="titleText">PROJECTS</a>
+            <a href="./index.html" draggable="false" class="home"></a> <a class="titleText"> HOME</a>
+            <a href="./projects.html" class="travel "></a><a class="titleText">PROJECTS</a>
             <a href="#" class="astro active"></a> <a class="titleText">ABOUT ME</a>
         </header>
         
@@ -51,7 +51,7 @@
                 <p class="contact-info">If you like what you saw and are interested in reaching me; You can find me here: </p>
                 <ul class="links">
                     <li>Email: renaud06goubelle@gmail.com</li>
-                    <li>Cell Phone: renaud06goubelle@gmail.com</li>
+                    <li>Cell Phone: 076 501 38 62</li>
                     <li>Links:</li>
                     <li><a href="https://github.com/Renaudjean">Git hub</a>  </li>
                     <li><a href="https://www.linkedin.com/feed/?trk=onboarding-landing">LinkedIn</a></li>
@@ -73,6 +73,6 @@
         src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
         crossorigin="anonymous"></script>
-        <script src="/script/script-about.js"></script>
+        <script src="./script/script-about.js"></script>
 </body>
 </html>
