--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <title>Renaud Goubelle</title>
     <link rel="stylesheet" href="./Style/style.css">
 </head>
-<body>
+<body id="index-body">
     <section id="bgindex">
        
    </section>
     <header class="header">
         <a href="#" draggable="false" class="home active"></a> <a class="titleText"> HOME</a>
-        <a href="/projects.html" class="travel"></a><a class="titleText">PROJECTS</a>
-        <a href="/about.html" class="astro"></a> <a class="titleText">ABOUT ME</a>
+        <a href="./projects.html" class="travel"></a><a class="titleText">PROJECTS</a>
+        <a href="./about.html" class="astro"></a> <a class="titleText">ABOUT ME</a>
     </header>
    
       <h1 class="welcomeMessage"> WELCOME INTO A SPACE OF INFINITE POSSIBILITIES </h1>
@@ -49,6 +49,6 @@
   src="https://code.jquery.com/jquery-3.6.0.js"
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
-  <script src="/script/script.js"></script>
+  <script src="./script/script.js"></script>
 </body>
 </html>
