--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,9 @@
        </section>
        </div>
         <header class="header">
-            <a href="/index.html" draggable="false" class="home"></a> <a class="titleText"> HOME</a>
+            <a href="./index.html" draggable="false" class="home"></a> <a class="titleText"> HOME</a>
             <a href="#" class="travel active"></a><a class="titleText">PROJECTS</a>
-            <a href="/about.html" class="astro"></a> <a class="titleText">ABOUT ME</a>
+            <a href="./about.html" class="astro"></a> <a class="titleText">ABOUT ME</a>
         </header>
         
       
@@ -173,7 +173,7 @@
         src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
         crossorigin="anonymous"></script>
-        <script src="/script/script.js"></script>
-        <script src="/script/script-project.js"></script>
+        <script src="./script/script.js"></script>
+        <script src="./script/script-project.js"></script>
 </body>
 </html>
