Update for the server adaption

--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
                     <li>Email: renaud06goubelle@gmail.com</li>
                     <li>Cell Phone: 076 501 38 62</li>
                     <li>Links:</li>
-                    <li><a href="https://github.com/Renaudjean">Git hub</a>  </li>
-                    <li><a href="https://www.linkedin.com/feed/?trk=onboarding-landing">LinkedIn</a></li>
+                    <li><a href="https://github.com/Renaudjean">My Git hub</a>  </li>
+                    <li><a href="https://www.linkedin.com/feed/?trk=onboarding-landing">My LinkedIn</a></li>
                     </ul>
             </div>
         </div>
