--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <div class="containerQuote">
         <img id="warning" src="./assets/warning.png">
-        <a href="/projects.html"> New frontiers detected </a>
+        <a href="./projects.html"> New frontiers detected </a>
         <img id="warning2" src="./assets/warning.png">
         
     </div>
