--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Exo+2:wght@200&display=swap" rel="stylesheet">
@@ -28,11 +29,11 @@
                    <div id="section1bg"></div>           
                    <h2 class="personality"> "Responsibility is the possibility of opportunity culminating in inevitable fulfillment." - Sri Chinmoy</h2>
                    <p class="personality-info"> I am a young French-Phillîpino, always looking to further my career. 
-                       Born in France, then brought to the Phillipines I learned to quickly adapt to a new environments. 
-                       I studied with no knowledge on the local languages and studied diligently to learn english.</p> 
+                       Born in France, then brought to the Phillipines I learned to quickly adapt to new environments. 
+                       I studied with no knowledge of the local languages and studied diligently to learn English.</p> 
                    <p class="personality-info"> A few years later I took an interest on the innerworkings of the world wide web and its workings. 
                        Taking a general IT course for 3 years before  reconverting to Web development after returning to France.</p> 
-                   <p class="personality-info"> In this new environment, I stuck by my values; Kindness, respect and loyalty to those who earned them. Values I intended to carrie with me within my carriere.  </p> 
+                   <p class="personality-info"> In this new environment, I stuck by my values; Kindness, respect and loyalty to those who earned them. Values I intended to carry with me within my carrier.  </p> 
         
                 </div>
 
@@ -53,8 +54,8 @@
                     <li>Email: renaud06goubelle@gmail.com</li>
                     <li>Cell Phone: 076 501 38 62</li>
                     <li>Links:</li>
-                    <li><a href="https://github.com/Renaudjean">My Git hub</a>  </li>
-                    <li><a href="https://www.linkedin.com/feed/?trk=onboarding-landing">My LinkedIn</a></li>
+                    <li><a href="https://github.com/Renaudjean" target="_blank">My Git hub</a>  </li>
+                    <li><a href="https://www.linkedin.com/feed/?trk=onboarding-landing" target="_blank">My LinkedIn</a></li>
                     </ul>
             </div>
         </div>
