--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Exo+2:wght@200&display=swap" rel="stylesheet">
@@ -44,7 +45,7 @@
                 
                 <div class="columnproject hidden ">
                     <h3 class="project-title"> Quizzdom </h3>
-                    <a class="project"><img id="quizzdom" src="./assets/projects/Quizzdom.PNG"></a>
+                    <a class="project" target="_blank" href="https://quizrae.promo-105.codeur.online/"><img id="quizzdom" src="./assets/projects/Quizzdom.PNG"></a>
                 </div>
             </div>
         
