Fixed the Skillgauge

--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
                         <svg class="circles hidden">        
                            
                             <circle cx="70" cy="70" r="70"></circle>
-                            <circle cx="70" cy="70" r="70" stroke-linecap="round"></circle>
+                            <circle class="paused" cx="70" cy="70" r="70" stroke-linecap="round"></circle>
                            </svg>
                         <div class="number hidden">
                             <h2 class="level hidden"> <span class="level hidden">90</span> <span class="level hidden">%</span> </h2>
@@ -89,7 +89,7 @@
                     <div class="percent hidden">
                         <svg class="circles hidden">
                             <circle cx="70" cy="70" r="70"></circle>
-                            <circle cx="70" cy="70" r="70" stroke-linecap="round"></circle>
+                            <circle class="paused" cx="70" cy="70" r="70" stroke-linecap="round"></circle>
                         </svg>
                         <div class="number hidden">
                             <h2 class="level hidden"><span class="level hidden">75</span> <span class="level hidden">%</span> </h2>
@@ -103,7 +103,7 @@
                     <div class="percent hidden">
                         <svg class="circles hidden">
                             <circle cx="70" cy="70" r="70"></circle>
-                            <circle cx="70" cy="70" r="70" stroke-linecap="round"></circle>
+                            <circle class="paused" cx="70" cy="70" r="70" stroke-linecap="round"></circle>
                         </svg>
                         <div class="number hidden">
                             <h2 class="level hidden"><span class="level hidden">65</span> <span class="level hidden">%</span> </h2>
